--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -63,5 +63,15 @@ publishing {
 
         }
     }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/the-best-dukkan/common-security")
+            credentials {
+                username = System.getenv("GITHUB_ACTOR") ?: project.findProperty("gpr.user")
+                password = System.getenv("GITHUB_TOKEN") ?: project.findProperty("gpr.key")
+            }
+        }
+    }
 }
 
