--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.tbd'
-version = '1.0.2'
+version = '1.0.3'
 
 // Apply a specific Java toolchain to ease working on different environments.
 java {
@@ -33,6 +33,13 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
+    // Allows you to use Servlet classes (HttpServletRequest, etc.)
+    // but doesn't force the dependency onto the consumer
+    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+
+    // You'll also need Spring Web for the filter classes
+    compileOnly 'org.springframework:spring-web'
+
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
@@ -58,7 +65,7 @@ publishing {
             // This is the "common-security" part
             artifactId = 'common-security'
 
-            version = '1.0.2'
+            version = '1.0.3'
 
         }
     }
